<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>picam_ros2</name>
  <version>0.0.2</version>
  <description>Picamera h.264 frames to ROS2 messages</description>
  <maintainer email="mirek@phntm.io">Mirek Burkon</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>ffmpeg_image_transport_msgs</depend>
  <!-- <depend>cv_bridge</depend> -->
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
